--- a/src/app/todolist/item/item.component.html
+++ b/src/app/todolist/item/item.component.html
@@ -1,8 +1,9 @@
 <li>
   <div class="view">
     <input class="toggle"
+           [checked]="item.completed"
            type="checkbox">
-    <label>Todo Title</label>
+    <label>{{ item.title }}</label>
     <button class="destroy"></button>
   </div>
   <input class="edit">
