--- a/src/app/todolist/item/item.component.html
+++ b/src/app/todolist/item/item.component.html
@@ -4,7 +4,8 @@
            [checked]="item.completed"
            type="checkbox">
     <label>{{ item.title }}</label>
-    <button class="destroy"></button>
+    <button (click)="destroy.emit(item)"
+            class="destroy"></button>
   </div>
   <input class="edit">
 </li>
