--- a/src/app/todolist/header/header.component.html
+++ b/src/app/todolist/header/header.component.html
@@ -1,6 +1,8 @@
 <header class="header">
-  <h1>todos</h1>
+  <h1>{{title}}</h1>
   <input class="new-todo"
+         (keydown.enter)="itemAdded.emit($event.target.value)"
          placeholder="What needs to be done?"
          autofocus>
 </header>
+
