--- a/src/app/todolist/item/item.component.html
+++ b/src/app/todolist/item/item.component.html
@@ -3,7 +3,7 @@
     <input class="toggle"
            [checked]="item.completed"
            type="checkbox">
-    <label>{{ item.title }}</label>
+    <label>{{ item.title | xilow }} {{ item.created | date }} </label>
     <button (click)="destroy.emit(item)"
             class="destroy"></button>
   </div>
