--- a/src/app/todolist/header/header.component.html
+++ b/src/app/todolist/header/header.component.html
@@ -1,6 +1,7 @@
 <header class="header">
-  <h1>{{title}}</h1>
+  <h1 appMarker>{{title}}</h1>
   <input class="new-todo"
+         appMarker="red"
          (keydown.enter)="itemAdded.emit($event.target.value)"
          placeholder="What needs to be done?"
          autofocus>
