--- a/src/app/todolist/list/list.component.html
+++ b/src/app/todolist/list/list.component.html
@@ -1,5 +1,5 @@
 <ul class="todo-list">
-  <app-item *ngFor="let i of list.items"
+  <app-item *ngFor="let i of items"
              [item]="i"
              (destroy)="list.removeItem(i)">
   </app-item>
