--- a/src/app/todolist/main/main.component.html
+++ b/src/app/todolist/main/main.component.html
@@ -2,6 +2,6 @@
   <input class="toggle-all"
          type="checkbox">
 
-  <app-list></app-list>
+  <app-list [items]="list.items"></app-list>
 
 </section>
